source/blender/makesdna/DNA_sdna_types.h
@@ -38,6 +38,8 @@ typedef struct SDNA {
 	int nr_names, nr_names_alloc;
 	/** Struct member names. */
 	const char **names;
+	/** Result of #DNA_elem_array_size (aligned with #names). */
+	short *names_array_len;
 
 	/** Size of a pointer in bytes. */
 	int pointer_size;
